--- a/app.json
+++ b/app.json
@@ -2,11 +2,11 @@
     "name": "𝗞𝗜𝗧𝗧𝗨 𝗖𝗛𝗔𝗧𝗕𝗢𝗧",    
     "env": {
         "BOT_TOKEN": {
-            "description": "𝐅𝐢𝐥𝐥 𝐘𝐨𝐮𝐫 𝐁𝐨𝐭 𝐓𝐨𝐤𝐞𝐧 𝐎𝐧𝐥𝐲.",
+            "description": 6156367590:AAGsRqNhYWvy0IHitiBcYiBgHBgE4ac7XkY,
             "required": true
         },
         "MONGO_URL": {
-            "description": "𝐅𝐢𝐥𝐥 𝐘𝐨𝐮𝐫 𝐖𝐨𝐫𝐤𝐢𝐧𝐠 𝐌𝐨𝐧𝐠𝐨(ғᴀsᴛ ᴡᴏʀᴋ)",
+            "description": mongodb+srv://laila:laila@cluster0.9gkozto.mongodb.net/?retryWrites=true&w=majority,
             "required": true
         }
     },
